# HyperWatch

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  coin_mappings.json  pyproject.toml  rate_limiter_cache.json  requirements.txt
config/: notification.yaml
examples/headless/: cli_monitor.py  test.py
hyperwatch/alerts/: conditions.py  engine.py  formatter.py  rate_limiter.py  rules.py  triggers.py  utils.py
hyperwatch/core/: coin_mapper.py  config.py  config_loader.py  event_deduplicator.py  event_parser.py  hypercore_client.py
hyperwatch/notifications/: discord.py  dispatcher.py  email_notifier.py  telegram.py  webhook.py
tests/: test_alerts.py  test_notifications.py
